--- a/src/pages/standings/standings.html
+++ b/src/pages/standings/standings.html
@@ -1,15 +1,7 @@
-<!--
-  Generated template for the StandingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>Standings</ion-title>
-  </ion-navbar>
+  <ion-navbar></ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <h2>Standings </h2>
 </ion-content>
