--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-navbar color='primary'>
-    <ion-title>{{team.name}}</ion-title>
-  </ion-navbar>
+  <ion-navbar></ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <h2>Team Detail</h2>
+  <h3>Name: {{team.name}}</h3>
 
+  <button ion-button (click)='goHome()'>Go Home</button>
 </ion-content>
