--- a/src/pages/team-home/team-home.html
+++ b/src/pages/team-home/team-home.html
@@ -1,15 +1,15 @@
-<!--
-  Generated template for the TeamHomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>TeamHome</ion-title>
+  <ion-navbar color='primary'>
+    <ion-title>{{team.name}}</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)='goHome()'>
+        <ion-icon name='home'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab tabTitle='Team' [root]='teamDetailTab' [rootParams]='team' tabIcon='basketball'></ion-tab>
+  <ion-tab tabTitle='Standings' [root]='standngsTab' [rootParams]='team' tabIcon='podium'></ion-tab>
+</ion-tabs>
