--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
 
   <!-- <p>You are not currently following any teams.</p>
   <p>First select a tournament, then you can follow teams from their team page.</p> -->
@@ -24,5 +24,8 @@
     </button>
   </ion-list>
 
-  <button ion-button full (click)='goToTournaments()'>Find a Tournament</button>
+  <button ion-button icon-left full (click)='goToTournaments()'>
+    <ion-icon name='search'></ion-icon>
+    Find a Tournament
+  </button>
 </ion-content>
